config example update

--- a/examples/configs/dataset.config
+++ b/examples/configs/dataset.config
@@ -1,11 +1,22 @@
-[DATASET-TRAIN]
-class =
-batch_size =
-num_workers =
-collate_fn =
-
-[DATASET-VAL]
-class =
-batch_size =
-num_workers =
-collate_fn =
+# Dataset configurations need to be organized as a dict
+#
+# **********  example  ***********
+# train:
+#     class:
+#     batch_size:
+#     num_workers:
+#     collate_fn:
+#
+# val:
+#     class:
+#     batch_size:
+#     num_workers:
+#     collate_fn:
+#
+# test: # optional
+#     class:
+#     batch_size:
+#     num_workers:
+#     collate_fn:
+#
+# ********************************
