--- a/examples/configs/model.config
+++ b/examples/configs/model.config
@@ -1,3 +1,16 @@
-[MODEL]
-mods =
-mods_args =
+# Model configurations need to be organized as a list to hold execution order
+#
+# **********  example  ***********
+# - name:
+#   class:
+#   args:
+#       args1:
+#       args2:
+#
+# - name:
+#   class:
+#   args:
+#       args1:
+#       args2:
+#
+# ********************************
