--- a/examples/configs/train.config
+++ b/examples/configs/train.config
@@ -1,19 +1,23 @@
-[OPTIMIZER]
-type = adam
-amsgrad = false
-weight_decay = 0.01
-fixed_weight_decay = true
-
-[LR-SCHEDULER]
-type = one_cycle
-total_step =
-lr_max =
-moms = [0.95, 0.85]
-div_factor = 10.0
-pct_start = 0.4
-
-[TRAINING]
-eval_step_list =
-save_step_list =
-eval_fn =
-eval_ext_args =
+# Training configurations need to be organized as a dict
+#
+# **********  example  ***********
+# optimizer:
+#     type: adam
+#     amsgrad: false
+#     weight_decay: 0.01
+#     fixed_weight_decay: true
+#
+# lr_scheduler:
+#     type: one_cycle
+#     total_step:
+#     lr_max:
+#     moms: [0.95, 0.85]
+#     div_factor: 10.0
+#     pct_start: 0.4
+#
+# training:
+#     eval_step_list:
+#     save_step_list:
+#     eval_fn:
+#     eval_ext_args:
+# ********************************
