--- a/examples/configs/model.config
+++ b/examples/configs/model.config
@@ -1,16 +1,17 @@
-# Model configurations need to be organized as a list to hold execution order
+# Sub-models need to be organized as a list to hold execution order
 #
 # **********  example  ***********
-# - name:
-#   class:
-#   args:
-#       args1:
-#       args2:
+# model:
+#     - name:
+#       class:
+#       args:
+#           args1:
+#           args2:
 #
-# - name:
-#   class:
-#   args:
-#       args1:
-#       args2:
+#     - name:
+#       class:
+#       args:
+#           args1:
+#           args2:
 #
 # ********************************
