--- a/examples/configs/train.config
+++ b/examples/configs/train.config
@@ -1,8 +1,8 @@
 # Training configurations need to be organized as a dict
 #
 # **********  example  ***********
-# optimizers:
-#     - modules: []  # required, None if applied to the whole network
+# optimizer:
+#     - module: []  # required, None if applied to the whole network
 #       type: adam  # required
 #       amsgrad: false
 #       weight_decay: 0.01
