--- a/examples/configs/train.config
+++ b/examples/configs/train.config
@@ -2,7 +2,7 @@
 #
 # **********  example  ***********
 # optimizer:
-#     - module: []  # required, None if applied to the whole network
+#     - modules: []  # required, None if applied to the whole network
 #       type: adam  # required
 #       amsgrad: false
 #       weight_decay: 0.01
